--- a/generators/pd-nodejs-playbook/templates/playbook.yaml
+++ b/generators/pd-nodejs-playbook/templates/playbook.yaml
@@ -47,7 +47,7 @@
     #     dest: "{{ item.dest }}"
     #     mode: "0775"
     #   become: yes
-    #   become_user: "{{ install_user }}"
+    #   become_user: "{{ polaris_install_user }}"
     #   with_items:
     #   - {
     #       src: "configuration.ts.j2",
