--- a/generators/gh-tomcat-deploy-onprem/templates/deploy.yaml
+++ b/generators/gh-tomcat-deploy-onprem/templates/deploy.yaml
@@ -119,7 +119,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v5
         with:
-          java-version: '<%= javaVersion %>'
+          java-version: '8'
           distribution: 'temurin'
           cache: maven
       - name: Set download URL
@@ -264,7 +264,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v5
         with:
-          java-version: '<%= javaVersion %>'
+          java-version: '8'
           distribution: 'temurin'
           cache: maven
       - name: Set download URL
