--- a/generators/gh-nodejs-build/templates/build-release.yaml
+++ b/generators/gh-nodejs-build/templates/build-release.yaml
@@ -101,7 +101,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           cache-dependency-path: ./<%= relativePath %>
-          node-version: 22
+          node-version: <%= nodeVersion %>
           cache: 'npm'
       - name: Set version
         working-directory: ./<%= relativePath %>
@@ -167,16 +167,45 @@ jobs:
           <%_ for (const artifact of ociArtifacts) { _%>
           echo "Pulling artifact <%= artifact.artifact %> to <%= artifact.output %>"
           oras pull <%= artifact.artifact %> --output <%= artifact.output %>
+          oras manifest fetch -o <%= artifact.output %>/manifest.json <%= artifact.artifact %>
           <%_ } -%>
         working-directory: ./<%= relativePath %>
         env:
           PROJECT_TAG: ${{ steps.set-version.outputs.tag }}
 <% } -%>
+      - name: Validate dist directory
+        run: |
+          if [ ! -d "dist" ]; then
+            echo "::error ::dist directory does not exist"
+            exit 1
+          fi
+          if [ -z "$(ls -A dist)" ]; then
+            echo "::error ::dist directory is empty"
+            exit 1
+          fi
+          echo "dist directory exists and contains files"
+        working-directory: ./<%= relativePath %>
+      - name: Create annotations file
+        run: |
+          cat <<EOF > annotation.json
+          {
+            "$manifest": {
+              "org.opencontainers.image.description": "Build artifact for <%= serviceName %> version ${PROJECT_TAG}",
+              "org.opencontainers.image.licenses": "<%= license %>",
+              "org.opencontainers.image.source": "${{ github.repositoryUrl }}",
+              "org.opencontainers.image.title": "<%= serviceName %>-artifact",
+              "org.opencontainers.image.version": "${PROJECT_TAG}",
+            }
+          }
+          EOF
+        env:
+          PROJECT_TAG: ${{ steps.set-version.outputs.tag }}
+        working-directory: ./<%= relativePath %>
       - name: Publish artifact
         id: publish-artifact
         run: |
           oras login ghcr.io -u ${{ github.actor }} --password-stdin <<< ${{ secrets.GITHUB_TOKEN }}
-          oras push --export-manifest manifest.json ghcr.io/${{ github.repository }}/<%= serviceName %>:${PROJECT_TAG} <%= publishArtifactSuffix %>
+          oras push --annotation-file annotation.json --export-manifest manifest.json ghcr.io/${{ github.repository }}/<%= serviceName %>:${PROJECT_TAG} <%= publishArtifactSuffix %>
           MANIFEST=$(cat ./manifest.json)
           echo $MANIFEST
           echo "artifact_sha256=$(echo $MANIFEST | jq -r '.layers[] | select(.annotations["org.opencontainers.image.title"] == "dist") | .digest')" >> $GITHUB_OUTPUT
