--- a/generators/gh-nodejs-build/templates/build-release.yaml
+++ b/generators/gh-nodejs-build/templates/build-release.yaml
@@ -167,8 +167,6 @@ jobs:
           <%_ for (const artifact of ociArtifacts) { _%>
           echo "Pulling artifact <%= artifact.artifact %> to <%= artifact.output %>"
           oras pull <%= artifact.artifact %> --output <%= artifact.output %>
-          oras manifest fetch -o <%= artifact.output %>/manifest-annotation.json <%= artifact.artifact %>
-          oras manifest fetch-config -o <%= artifact.output %>/manifest-config.json <%= artifact.artifact %>
           <%_ } -%>
         working-directory: ./<%= relativePath %>
         env:
@@ -188,7 +186,7 @@ jobs:
         working-directory: ./<%= relativePath %>
       - name: Create annotations files
         run: |
-          cat <<EOF > manifest-annotation.json
+          cat <<EOF > annotation.json
           {
             "$manifest": {
               "org.opencontainers.image.description": "Build artifact for <%= serviceName %> version ${PROJECT_TAG}",
@@ -199,21 +197,6 @@ jobs:
             }
           }
           EOF
-          cat <<EOF > manifest-config.json
-          {
-            "architecture": "amd64",
-            "os": "linux",
-            "config": {
-              "Labels": {
-                "org.opencontainers.image.description": "Build artifact for <%= serviceName %> version ${PROJECT_TAG}",
-                "org.opencontainers.image.licenses": "<%= license %>",
-                "org.opencontainers.image.source": "${{ github.repositoryUrl }}",
-                "org.opencontainers.image.title": "<%= serviceName %>-artifact",
-                "org.opencontainers.image.version": "${PROJECT_TAG}"
-              }
-            }
-          }
-          EOF
         env:
           PROJECT_TAG: ${{ steps.set-version.outputs.tag }}
         working-directory: ./<%= relativePath %>
@@ -221,7 +204,7 @@ jobs:
         id: publish-artifact
         run: |
           oras login ghcr.io -u ${{ github.actor }} --password-stdin <<< ${{ secrets.GITHUB_TOKEN }}
-          oras push --annotation-file manifest-annotation.json --config manifest-config.json:application/vnd.oci.image.config.v1+json --export-manifest manifest.json ghcr.io/${{ github.repository }}/<%= serviceName %>:${PROJECT_TAG} <%= publishArtifactSuffix %>
+          oras push --annotation-file annotation.json --export-manifest manifest.json ghcr.io/${{ github.repository }}/<%= serviceName %>:${PROJECT_TAG} annotation.json <%= publishArtifactSuffix %>
           MANIFEST=$(cat ./manifest.json)
           echo $MANIFEST
           echo "artifact_sha256=$(echo $MANIFEST | jq -r '.layers[] | select(.annotations["org.opencontainers.image.title"] == "dist") | .digest')" >> $GITHUB_OUTPUT
